# Calculator

./: .gitignore  HOW_TO_TEST_PDF.md  PDF_OUTPUT_REFERENCE.md  PDF_VERIFICATION_REPORT.md  README.md  TEST_CHECKLIST.md  VERIFICATION_SUMMARY.md  package.json  server.js  test_history.html  test_jspdf.html
backend/: CMakeLists.txt  Makefile
backend/include/: calculator.h
backend/src/: calculator.cpp  main.cpp
docs/: API.md
frontend/: app.js  index.html  pdf-test.html  style.css
